# omnidaemon

./: .gitignore  API.md  Cargo.toml  LICENSE.md  README.md
client/: Cargo.toml
client/src/: lib.rs  transport.rs
daemon/: Cargo.toml  build.rs
daemon/src/: api_json.rs  auth.rs  autostart.rs  config.rs  daemon_module.rs  ffi_ops.rs  lib.rs  main.rs  modifiers.rs  orchestrator.rs  server.rs  state.rs  transport.rs
daemon/src/modules/: config_mod.rs  crown_mod.rs  daemon_mod.rs  discovery_mod.rs  editor_mod.rs  events_mod.rs  gospel_mod.rs  health_mod.rs  ideas_mod.rs  mod.rs  network_mod.rs  omnibus_mod.rs  op_mod.rs  tower_mod.rs  vault_mod.rs
daemon/tests/: e2e.rs  integration.rs
tray/: Cargo.toml
tray/src/: animation.rs  icon.rs  main.rs  status.rs
