[package]
name = "omny-tray"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omny-tray"
path = "src/main.rs"

[dependencies]
omny-client = { path = "../client" }
tray-icon = "0.21"
winit = "0.30"
resvg = "0.47"
log = "0.4"
env_logger = "0.11"
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
objc2-foundation = "0.3"
